--- a/estilos.css
+++ b/estilos.css
@@ -35,7 +35,7 @@ section#a {
 section#a img {
     width: 50px;
     height: 50px;
-    margin: 10px;
+    margin: 10px -10px 10px 10px;
     border-radius: 50%;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0);
     box-sizing: border-box;
@@ -56,7 +56,7 @@ section#b {
 section#b img {
     width: 50px;
     height: 50px;
-    margin: 10px;
+    margin: 10px -10px 10px 10px;
     border-radius: 50%;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0);
     box-sizing: border-box;
@@ -77,7 +77,7 @@ section#c {
 section#c img {
     width: 50px;
     height: 50px;
-    margin: 10px;
+    margin: 10px 10px 10px -10px;
     border-radius: 50%;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0);
     box-sizing: border-box;
